# nm_otool

./: .gitignore  CMakeLists.txt  Makefile  all_test.sh  nm_test.sh  otool_test.sh
Includes/ft_nm/: ft_nm.h
Includes/ft_otool/: ft_otool.h
Libs/libft/: CMakeLists.txt  Makefile  ft_strcpy.c  ft_strjoin.c  libft.h
Libs/libft/ft_printf/: ft_strlen.c
Srcs/ft_nm/: errors.c  find_in_symtable.c  find_in_symtable_64.c  get_nm_dispatch_functions.c  get_section.c  get_section_64.c  get_symtable.c  get_symtable_64.c  handle.c  handle_64.c  handle_ar.c  handle_fat.c  handle_fat_64.c  main.c  print_filename.c  select_better_symbol.c  select_better_symbol_64.c  sort_symtable.c  sort_symtable_64.c
Srcs/ft_otool/: errors.c  handle.c  handle_64.c  handle_ar.c  handle_fat.c  handle_fat_64.c  main.c  set_g_arch.c
